--- a/web/templates/app.html
+++ b/web/templates/app.html
@@ -28,7 +28,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div id="slidemenu">
             <ul class="nav navbar-nav navbar-right login">
-                <li id="spinner"><a><span class="fa fa-spinner" aria-hidden="true"></span></a></li>
+                <li id="spinner"><a><span class="fa fa-spinner fa-spin" aria-hidden="true"></span></a></li>
                 <!--
                 <li class="app-notify"><a href="#"><span class="glyphicon glyphicon-bell" aria-hidden="true"></span></a></li>
                 -->
