minor fixes in html

--- a/web/static/templates/search.html
+++ b/web/static/templates/search.html
@@ -2,14 +2,18 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12 content table-responsive">
+                <div class="heading">
+                    <h2>Katalog uczelni</h2>
+                    <p></p>
+                </div>
                 <div id="search_form">
                     <form class="form-inline">
                         <div class="form-group">
                             <label for="exampleInputName2">Czego szukasz?</label>
-                            <input type="text" class="form-control" id="searchText" placeholder="Jane Doe">
+                            <input type="text" class="form-control" id="searchText" placeholder="">
                         </div>
                         <div class="form-group">
-                            <label for="exampleInputEmail2">Gdzie chcesz znaleźć?</label>
+                            <label for="exampleInputEmail2">&nbsp;&nbsp;Gdzie chcesz znaleźć?</label>
                             <select class="form-control" id="searchType">
                                 <option value="users">Uzytkownicy</option>
                                 <option value="courses">Przedmioty</option>
