--- a/web/templates/app.html
+++ b/web/templates/app.html
@@ -51,8 +51,8 @@
                 <li><a href="#terms">Cykle</a></li>
                 <li><a href="#programmes">Kierunki</a></li>
                 <li><a href="#faculties">Jednostki</a></li>
-                <li><a href="#friends">Znajomi</a></li>
-                <li><a href="#search">Szukaj</a></li>
+                <!--<li><a href="#friends">Znajomi</a></li>-->
+                <li><a href="#search">Katalog</a></li>
                 <li><a href="#contact">Kontakt</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
@@ -92,8 +92,9 @@
                     <ul class="nav navbar-nav navbar-right navbar-bottom">
                         <li><a href="regulamin">Regulamin</a></li>
                         <li><a href="mailto:kujon@kujon.mobi"><i class="fa fa-envelope"></i> Kontakt</a></li>
-                        <li class="fb"><a href="#"><span class="fa fa-facebook"></span></a></li>
-                        <li class="andr"><a href="#"><span class="fa fa-android"></span></a></li>
+                        <li class="fb"><a href="https://www.facebook.com/kujonmobi-992906237450440/" target="_blank"><span class="fa fa-facebook"></span></a></li>
+                        <li class="andr"><a href="https://play.google.com/store/apps/details?id=mobi.kujon"><span class="fa fa-android"></span></a></li>
+                        <li class="apple"><a href="https://itunes.apple.com/pl/app/kujon"><span class="fa fa-apple"></span></a></li>
                     </ul>
                 </div>
             </div>
