--- a/web/static/templates/contact.html
+++ b/web/static/templates/contact.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-sm-12 heading">
                 <h2 class="skorzystaj-z-pomocy">Skorzystaj z kontaku</h2>
-                <p>Masz jakieś pytania lub problemy z korzystaniem z aplikacji? Napisz do nas..</p>
+                <p>Masz jakieś pytania lub problemy z korzystaniem z aplikacji? Napisz do nas.</p>
             </div>
             <div class="col-sm-12">
                 <form class="form-horizontal" enctype="multipart/form-data">
