--- a/web/static/templates/friends.html
+++ b/web/static/templates/friends.html
@@ -7,7 +7,7 @@
                 </div>
                 <div class="eksport">
                     <a href="#" class="btn btn-default btn-refresh" type="submit">Odśwież</a>
-                    <a href="#" class="btn btn-default btn-welcome" type="submit">Eksportuj z Facebook</a>
+                    <a href="#" class="btn btn-default btn-export" type="submit">Eksportuj z Facebook</a>
                 </div>
             </div>
             <div class="col-sm-8 col-xs-12">
