--- a/web/templates/register.html
+++ b/web/templates/register.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block header_js %}
-<script type="text/javascript" src="/static/bower_components/jquery/dist/jquery.min"></script>
+<script type="text/javascript" src="/static/bower_components/jquery/dist/jquery.min.js"></script>
 {% end %}
 
 {% block navigation %}
