--- a/web/templates/register.html
+++ b/web/templates/register.html
@@ -15,7 +15,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="/"><img src="/static/img/logo-landing.png"
+            <a class="navbar-brand page-scroll" href="/"><img src="/static/img/logo-app.png"
                                                               class="img-responsive"/></a>
         </div>
         <ul class="nav navbar-nav navbar-right">
