--- a/web/templates/app.html
+++ b/web/templates/app.html
@@ -136,25 +136,36 @@
             $('#page-content, .navbar, body, .navbar-header').toggleClass('slide-active');
 
         });
-        $('#slidemenu .dropdown-menu>li>a, .navbar-left>li>a').click(function() {
-            var selected = $("#slide-nav").hasClass('slide-active');
-            $('#slidemenu').stop().animate({
-                right: selected ? menuneg : '0px'
-            });
-            $('#navbar-height-col').stop().animate({
-                right: selected ? slideneg : '0px'
-            });
-            $(pagewrapper).stop().animate({
-                right: selected ? '0px' : slidewidth
-            });
-            $(navigationwrapper).stop().animate({
-                right: selected ? '0px' : slidewidth
-            });
-            $("#slide-nav").removeClass('slide-active', !selected);
-            $('#slidemenu').removeClass('slide-active');
-            $('.navbar-toggle').removeClass('slide-active');
-            $('#page-content, .navbar, body, .navbar-header').removeClass('slide-active');
+        var selected = '#slidemenu, #page-content, body, .navbar, .navbar-header';
+        $(window).on("resize", function() {
+            if ($(window).width() > 1000 && $('.navbar-toggle').is(':hidden')) {
+                $(selected).removeClass('slide-active');
+            }
         });
+        $(window).on("resize", function() {
+            if ($(window).width() < 1000) {
+                $('#slidemenu .dropdown-menu>li>a, .navbar-left>li>a').click(function() {
+                    var selected = $("#slide-nav").hasClass('slide-active');
+                    $('#slidemenu').stop().animate({
+                        right: selected ? menuneg : '0px'
+                    });
+                    $('#navbar-height-col').stop().animate({
+                        right: selected ? slideneg : '0px'
+                    });
+                    $(pagewrapper).stop().animate({
+                        right: selected ? '0px' : slidewidth
+                    });
+                    $(navigationwrapper).stop().animate({
+                        right: selected ? '0px' : slidewidth
+                    });
+                    $("#slide-nav").removeClass('slide-active', !selected);
+                    $('#slidemenu').removeClass('slide-active');
+                    $('.navbar-toggle').removeClass('slide-active');
+                    $('#page-content, .navbar, body, .navbar-header').removeClass('slide-active');
+                });
+            }
+        });
+
         var selected = '#slidemenu, #page-content, body, .navbar, .navbar-header';
         $(window).on("resize", function() {
             if ($(window).width() > 1000 && $('.navbar-toggle').is(':hidden')) {
