--- a/web/templates/app.html
+++ b/web/templates/app.html
@@ -6,9 +6,7 @@
 <script type="text/javascript" data-main="/static/js/startup.js"
         src="/static/bower_components/requirejs/require.js"></script>
 
-{% end %}
-
-{% block navigation %}
+{% end %} {% block navigation %}
 <nav class="navbar navbar-default nawigacja-app navbar-fixed-top" role="navigation" id="slide-nav">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -134,35 +132,25 @@
             $(this).toggleClass('slide-active', !selected);
             $('#slidemenu').toggleClass('slide-active');
             $('#page-content, .navbar, body, .navbar-header').toggleClass('slide-active');
-
         });
-        var selected = '#slidemenu, #page-content, body, .navbar, .navbar-header';
-        $(window).on("resize", function() {
-            if ($(window).width() > 1000 && $('.navbar-toggle').is(':hidden')) {
-                $(selected).removeClass('slide-active');
-            }
-        });
-        $(window).on("resize", function() {
-            if ($(window).width() < 1000) {
-                $('#slidemenu .dropdown-menu>li>a, .navbar-left>li>a').click(function() {
-                    var selected = $("#slide-nav").hasClass('slide-active');
-                    $('#slidemenu').stop().animate({
-                        right: selected ? menuneg : '0px'
-                    });
-                    $('#navbar-height-col').stop().animate({
-                        right: selected ? slideneg : '0px'
-                    });
-                    $(pagewrapper).stop().animate({
-                        right: selected ? '0px' : slidewidth
-                    });
-                    $(navigationwrapper).stop().animate({
-                        right: selected ? '0px' : slidewidth
-                    });
-                    $("#slide-nav").removeClass('slide-active', !selected);
-                    $('#slidemenu').removeClass('slide-active');
-                    $('.navbar-toggle').removeClass('slide-active');
-                    $('#page-content, .navbar, body, .navbar-header').removeClass('slide-active');
+        $('.navbar-nav.navbar-left a').on('click', function() {
+            if ($(window).width() < 999) {
+                var selected = $("#slide-nav").hasClass('slide-active');
+                $('#slidemenu').stop().animate({
+                    right: selected ? menuneg : '0px'
                 });
+                $('#navbar-height-col').stop().animate({
+                    right: selected ? slideneg : '0px'
+                });
+                $(pagewrapper).stop().animate({
+                    right: selected ? '0px' : slidewidth
+                });
+                $(navigationwrapper).stop().animate({
+                    right: selected ? '0px' : slidewidth
+                });
+                $('#slide-nav').removeClass('slide-active', !selected);
+                $('#slidemenu').removeClass('slide-active');
+                $('#page-content, .navbar, body, .navbar-header, .navbar-toggle').removeClass('slide-active');
             }
         });
 
@@ -172,8 +160,6 @@
                 $(selected).removeClass('slide-active');
             }
         });
-
-
     });
 </script>
 
