--- a/web/templates/register.html
+++ b/web/templates/register.html
@@ -1,10 +1,6 @@
-{% extends "base.html" %}
-
-{% block header_js %}
+{% extends "base.html" %} {% block header_js %}
 <script type="text/javascript" src="/static/bower_components/jquery/dist/jquery.min.js"></script>
-{% end %}
-
-{% block navigation %}
+{% end %} {% block navigation %}
 <nav class="navbar navbar-default nawigacja-app navbar-fixed-top" role="navigation" id="slide-nav">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -15,27 +11,30 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="/"><img src="/static/img/logo-app.png"
-                                                              class="img-responsive"/></a>
+            <a class="navbar-brand page-scroll" href="profil.html"><img src="/static/img/logo-app.png"
+                                                                        class="img-responsive"/></a>
         </div>
-        <ul class="nav navbar-nav navbar-right">
-            <li>
-                <a class="btn btn-group" href="{{API_URL}}/authentication/archive">
-                    Skasuj konto
-                </a>
-            </li>
-            <li>
-                <a class="btn btn-group" href="{{API_URL}}/authentication/logout">
-                    Wyloguj się
-                </a>
-            </li>
-        </ul>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div id="slidemenu">
+            <ul class="nav navbar-nav navbar-right ">
+                <li>
+                    <a class="btn btn-group" href="{{API_URL}}/authentication/archive">
+                        Skasuj konto
+                    </a>
+                </li>
+                <li>
+                    <a class="btn btn-group" href="{{API_URL}}/authentication/logout">
+                        Wyloguj się
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <!-- /.navbar-collapse -->
     </div>
+    <!-- /.container-fluid -->
 </nav>
 
-{% end %}
-
-{% block main %}
+{% end %} {% block main %}
 <section id="wybor-uczelni" class="college-selection">
     <div class="container">
         <div class="row">
@@ -77,7 +76,8 @@
         <div class="row">
             <div class="col-sm-6">
                 <p class="footer-block">Copyright 2016 by <a href="http://kujon.mobi">Kujon.mobi</a>. All rights
-                    reserved.</p>
+                    reserved.
+                </p>
             </div>
             <div class="col-sm-6">
                 <ul class="nav navbar-nav navbar-right navbar-bottom">
@@ -95,29 +95,25 @@
     </div>
 </footer>
 
-{% end %}
-
-{% block footer_js %}
+{% end %} {% block footer_js %}
 
 <script>
+    $(window).load(function() {
+        if ($('section').hasClass("college-selection")) {
+            var kolumnaPrawa = $("div.border-logo-cykle").height();
+            var kolumnaLewa = $("div.border-logo-cykle").height();
 
-    $(window).load(function(){
-			if($('section').hasClass("college-selection")){
-			var kolumnaPrawa =  $("div.border-logo-cykle").height();
-			var kolumnaLewa = $("div.border-logo-cykle").height();
-
-			if (kolumnaLewa > kolumnaPrawa)
-			{
-				$("div.border-logo-cykle").css({'height' : kolumnaLewa});
-			}
-			else
-			{
-				$("div.border-logo-cykle").css({'height' : kolumnaPrawa});
-			};
-			};
-		});
-
-
+            if (kolumnaLewa > kolumnaPrawa) {
+                $("div.border-logo-cykle").css({
+                    'height': kolumnaLewa
+                });
+            } else {
+                $("div.border-logo-cykle").css({
+                    'height': kolumnaPrawa
+                });
+            };
+        };
+    });
 </script>
 
 {% end %}
