add url to api/usos

--- a/web/static/templates/course_details.html
+++ b/web/static/templates/course_details.html
@@ -74,7 +74,7 @@
             </td>
             {{/if}} {{#if description}}
             <td class="col-sm-3">
-                <p class="title-courses" data-toggle="collapse" data-target="#collapseDescription">Opis:</p>
+                <button class="title-courses" data-toggle="collapse" data-target="#collapseDescription"><span> Opis: rozwiń..</span></button>
                 <div class="collapse" id="collapseDescription">
                     <div class="well">
                         <p class="description-courses">
