--- a/web/static/templates/modal_course.html
+++ b/web/static/templates/modal_course.html
@@ -77,7 +77,7 @@
 							</div>
 							<div class="col-sm-2">
 								<p class="title-courses" data-toggle="collapse" data-target="#collapseDescription">
-									Opis:</p>
+									Opis: rozwiń..</p>
 								<div class="collapse" id="collapseDescription">
 									<div class="well">
 										<p class="description-courses">
