--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -12,10 +12,12 @@ h2{font-weight:300;}
 .during{color:#3976ff;}
 #page-content.landing-page{min-height: 100%;}
 #page-content{height: 100%;}
+
+.content-section{display:table !important;
+    height: auto !important;}
 section{margin-bottom:80px;}
 section>.container>.row>.content{margin-top: 110px;}
-#section-content{min-height: 100%;display:table;
-    height: auto;
+#section-content{min-height: 100%;height:100%;display:block;
     margin: 0 auto -60px;
 }
 #footer {width: 100%;height: 60px;}
