--- a/web/templates/register.html
+++ b/web/templates/register.html
@@ -87,7 +87,7 @@
             </div>
             <div class="col-sm-6">
                 <ul class="nav navbar-nav navbar-right navbar-bottom">
-                    <li><a href="regulamin">Regulamin</a></li>
+                    <li><a href="regulamin">Regulamin i polityka prywatności</a></li>
                     <li><a href="mailto:kujon@kujon.mobi"><i class="fa fa-envelope"></i> Kontakt</a></li>
                     <li class="fb"><a href="https://www.facebook.com/kujonmobi-992906237450440/" target="_blank"><span
                             class="fa fa-facebook"></span></a></li>
