--- a/web/static/templates/search.html
+++ b/web/static/templates/search.html
@@ -3,29 +3,20 @@
         <div class="row">
             <div class="col-sm-12 content table-responsive">
                 <div class="heading">
-                    <h2>Katalog uczelni</h2>
-                    <p></p>
+                    <h2>Wyszukaj na uczelni </h2>
                 </div>
-                <div id="search_form">
+                <div id="search_filter" class="dataTables_filter">
                     <form class="form-inline">
-                        <div class="form-group">
-                            <label for="exampleInputName2">Czego szukasz?</label>
-                            <input type="text" class="form-control" id="searchText" placeholder="">
-                        </div>
-                        <div class="form-group">
-                            <label for="exampleInputEmail2">&nbsp;&nbsp;Gdzie chcesz znaleźć?</label>
-                            <select class="form-control" id="searchType">
-                                <option value="users">Uzytkownicy</option>
-                                <option value="courses">Przedmioty</option>
-                                <option value="faculties">Jednostki</option>
-                                <option value="programmes">Programy</option>
-                            </select>
-                        </div>
-
+                        <select class="form-control" id="searchType">
+                            <option value="users">Uzytkownika </option>
+                            <option value="courses">Przedmiot </option>
+                            <option value="faculties">Wydział lub jednostkę</option>
+                            <option value="programmes">Kierunek studiów </option>
+                        </select>
+                        <input type="text" class="form-control" id="searchText" placeholder="Wpisz frazę" >
                         <button id="searchSubmit" type="submit" class="btn btn-default">Szukaj</button>
                     </form>
                 </div>
-                </br>
 
                 <div id="search_results"></div>
 
