--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -32,6 +32,23 @@
     {% block header_js %}
     {% end %}
 
+    <div class="modal fade" id="modalDisclaimer" tabindex="-1" role="dialog" aria-labelledby="disclaimerModalLabel">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <div class="col-sm-12">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                                aria-hidden="true">&times;</span></button>
+                        <h3>Regulamin i polityka prywatności</h3>
+                    </div>
+                </div>
+                <div class="modal-body">
+
+                </div>
+            </div>
+        </div>
+    </div>
+
 </head>
 <body>
 
