--- a/web/templates/app.html
+++ b/web/templates/app.html
@@ -86,7 +86,7 @@
                 </div>
                 <div class="col-sm-6">
                     <ul class="nav navbar-nav navbar-right navbar-bottom">
-                        <li><a href="regulamin">Regulamin i polityka prywatności</a></li>
+                        <li><a href="regulamin" id="btnDisclaimer">Regulamin i polityka prywatności</a></li>
                         <li><a href="mailto:kujon@kujon.mobi"><i class="fa fa-envelope"></i> Kontakt</a></li>
                         <li class="fb"><a href="https://www.facebook.com/kujonmobi-992906237450440/" target="_blank"><span class="fa fa-facebook"></span></a></li>
                         <li class="andr"><a href="https://play.google.com/store/apps/details?id=mobi.kujon"><span class="fa fa-android"></span></a></li>
@@ -176,6 +176,14 @@
             }
         });
     });
+
+</script>
+
+<script type="text/javascript">
+$('#btnDisclaimer').on('click', function(e){
+    e.preventDefault();
+    $('#modalDisclaimer').modal('show').find('.modal-body').load($(this).attr('href'));
+});
 </script>
 
 {% end %}
